--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 从零开始做网页
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Δ的主页</title>
+</head>
+<body>
+<img src="Δ.jpg">
+德尔塔阔爱
+莉莉亚阔爱
+罗莎莉亚可爱
+</body>
+</html>
