--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-从零开始做网页
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +6,8 @@
 </head>
 <body>
 <img src="Δ.jpg">
-德尔塔阔爱
-莉莉亚阔爱
-罗莎莉亚可爱
+<h1>德尔塔阔爱<h1>
+<p>莉莉亚阔爱<p>
+<p>罗>莎莉亚可爱<p>
 </body>
 </html>
