--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <img src="Δ.jpg/">
-<h1>德尔塔阔爱<h1>
-<p>莉莉亚阔爱<p>
-<p>罗>莎莉亚可爱<p>
+<h1>德尔塔阔爱</h1>
+<p>莉莉亚阔爱</p>
+<p>罗>莎莉亚可爱/<p>
 </body>
 </html>
