--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Δ的主页</title>
 </head>
 <body>
-<img src="Δ.jpg/">
+<img src="Δ.jpg"/>
 <h1>德尔塔阔爱</h1>
 <p>莉莉亚阔爱</p>
-<p>罗莎莉亚可爱/<p>
+<p>罗莎莉亚可爱</p>
 </body>
 </html>
